--- a/feedback.html
+++ b/feedback.html
@@ -136,7 +136,14 @@
          data-full-width-responsive="true"></ins>
     <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
   </div>
+</div>
 
+<!-- Datenschutzerklärung außerhalb der Box -->
+  <div style="text-align: center; margin-top: 30px; font-size: 0.9rem; color: #6b7280;">
+  <a href="https://cyperking5.github.io/privacy.html" target="_blank" rel="noopener noreferrer">
+    Privacy Policy
+  </a>
+</div>
   <!-- Firebase Modular SDK -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
