--- a/index.html
+++ b/index.html
@@ -3,207 +3,159 @@
 <head>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5310734846855331"
      crossorigin="anonymous"></script>
-  <meta charset="UTF-8">
-  <title>Retro Pong</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Neon Snake</title>
   <style>
-    html, body {
+    body {
       margin: 0;
-      padding: 0;
-      background: #000;
-      color: #fff;
+      background-color: #000;
+      color: #0f0;
       font-family: monospace;
-      height: 100%;
-      overflow: hidden;
-    }
-
-    #wrapper {
       display: flex;
       flex-direction: column;
+      align-items: center;
+      justify-content: center;
       height: 100vh;
     }
 
     canvas {
-      flex: 1;
-      background: #000;
-      display: block;
+      background-color: #111;
+      box-shadow: 0 0 20px #0f0;
+      border: 2px solid #0f0;
     }
 
-    #touch-controls {
-      display: none;
-      width: 100%;
-      text-align: center;
-      z-index: 10;
+    .controls {
+      margin-top: 20px;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 10px;
     }
 
-    .btn {
-      width: 50%;
-      height: 100px;
-      background: #111;
-      color: white;
-      font-size: 24px;
-      border: 1px solid white;
-      float: left;
-      touch-action: manipulation;
+    button {
+      background-color: #000;
+      border: 2px solid #0f0;
+      color: #0f0;
+      padding: 10px 20px;
+      font-size: 16px;
+      cursor: pointer;
+      box-shadow: 0 0 5px #0f0;
     }
 
-    @media (pointer: coarse) {
-      #touch-controls {
-        display: flex;
-      }
-    }
-
-    #ad-container {
-      background: #111;
-      text-align: center;
-      padding: 4px 0;
+    button:active {
+      box-shadow: 0 0 15px #0f0;
     }
   </style>
-
-  <!-- Google AdSense -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5310734846855331"
-     crossorigin="anonymous"></script>
 </head>
 <body>
-  <div id="wrapper">
-    <canvas id="gameCanvas" width="600" height="400"></canvas>
 
-    <div id="touch-controls">
-      <button class="btn" id="btn-up">⬆️</button>
-      <button class="btn" id="btn-down">⬇️</button>
-    </div>
+  <canvas id="game" width="300" height="300"></canvas>
 
-    <div id="ad-container">
-      <!-- Banner unten -->
-      <ins class="adsbygoogle"
-           style="display:block"
-           data-ad-client="ca-pub-5310734846855331"
-           data-ad-slot="2440550172"
-           data-ad-format="auto"
-           data-full-width-responsive="true"></ins>
-      <script>
-           (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
+  <div class="controls">
+    <button onclick="setDirection('up')">⬆️</button>
+    <div>
+      <button onclick="setDirection('left')">⬅️</button>
+      <button onclick="setDirection('down')">⬇️</button>
+      <button onclick="setDirection('right')">➡️</button>
     </div>
   </div>
 
   <script>
-    const canvas = document.getElementById('gameCanvas');
+    const canvas = document.getElementById('game');
     const ctx = canvas.getContext('2d');
 
-    let paddleHeight = 80;
-    let paddleWidth = 10;
+    const gridSize = 15;
+    const tileCount = canvas.width / gridSize;
 
-    let playerY = canvas.height / 2 - paddleHeight / 2;
-    let aiY = canvas.height / 2 - paddleHeight / 2;
+    let snake = [{ x: 10, y: 10 }];
+    let direction = { x: 0, y: 0 };
+    let food = randomFood();
+    let gameOver = false;
 
-    let ballX = canvas.width / 2;
-    let ballY = canvas.height / 2;
-    let ballSpeedX = 4;
-    let ballSpeedY = 2;
+    function randomFood() {
+      return {
+        x: Math.floor(Math.random() * tileCount),
+        y: Math.floor(Math.random() * tileCount)
+      };
+    }
 
-    let upPressed = false;
-    let downPressed = false;
+    function setDirection(dir) {
+      if (dir === 'up' && direction.y === 0) direction = { x: 0, y: -1 };
+      if (dir === 'down' && direction.y === 0) direction = { x: 0, y: 1 };
+      if (dir === 'left' && direction.x === 0) direction = { x: -1, y: 0 };
+      if (dir === 'right' && direction.x === 0) direction = { x: 1, y: 0 };
+    }
 
     document.addEventListener('keydown', e => {
-      if (e.key === 'ArrowUp') upPressed = true;
-      if (e.key === 'ArrowDown') downPressed = true;
+      if (e.key === 'ArrowUp') setDirection('up');
+      if (e.key === 'ArrowDown') setDirection('down');
+      if (e.key === 'ArrowLeft') setDirection('left');
+      if (e.key === 'ArrowRight') setDirection('right');
     });
 
-    document.addEventListener('keyup', e => {
-      if (e.key === 'ArrowUp') upPressed = false;
-      if (e.key === 'ArrowDown') downPressed = false;
+    // Touch-Steuerung
+    let touchStartX = 0;
+    let touchStartY = 0;
+
+    canvas.addEventListener('touchstart', e => {
+      const t = e.touches[0];
+      touchStartX = t.clientX;
+      touchStartY = t.clientY;
     });
 
-    document.addEventListener('mousemove', e => {
-      const rect = canvas.getBoundingClientRect();
-      const root = document.documentElement;
-      let mouseY = e.clientY - rect.top - root.scrollTop;
-      playerY = mouseY - paddleHeight / 2;
+    canvas.addEventListener('touchend', e => {
+      const t = e.changedTouches[0];
+      const dx = t.clientX - touchStartX;
+      const dy = t.clientY - touchStartY;
+
+      if (Math.abs(dx) > Math.abs(dy)) {
+        if (dx > 0) setDirection('right');
+        else setDirection('left');
+      } else {
+        if (dy > 0) setDirection('down');
+        else setDirection('up');
+      }
     });
-
-    document.getElementById('btn-up').addEventListener('touchstart', () => upPressed = true);
-    document.getElementById('btn-up').addEventListener('touchend', () => upPressed = false);
-    document.getElementById('btn-down').addEventListener('touchstart', () => downPressed = true);
-    document.getElementById('btn-down').addEventListener('touchend', () => downPressed = false);
-
-    function drawRect(x, y, w, h, color = '#fff') {
-      ctx.fillStyle = color;
-      ctx.fillRect(x, y, w, h);
-    }
-
-    function drawBall(x, y, r) {
-      ctx.fillStyle = '#fff';
-      ctx.beginPath();
-      ctx.arc(x, y, r, 0, Math.PI * 2, true);
-      ctx.fill();
-    }
-
-    function drawNet() {
-      for (let i = 0; i < canvas.height; i += 20) {
-        drawRect(canvas.width / 2 - 1, i, 2, 10);
-      }
-    }
-
-    function update() {
-      if (upPressed) playerY -= 6;
-      if (downPressed) playerY += 6;
-
-      playerY = Math.max(0, Math.min(canvas.height - paddleHeight, playerY));
-
-      // AI movement
-      let aiCenter = aiY + paddleHeight / 2;
-      if (aiCenter < ballY - 35) aiY += 3.5;
-      else if (aiCenter > ballY + 35) aiY -= 3.5;
-
-      aiY = Math.max(0, Math.min(canvas.height - paddleHeight, aiY));
-
-      // Ball movement
-      ballX += ballSpeedX;
-      ballY += ballSpeedY;
-
-      if (ballY < 0 || ballY > canvas.height) ballSpeedY = -ballSpeedY;
-
-      // Paddle collisions
-      if (ballX < paddleWidth) {
-        if (ballY > playerY && ballY < playerY + paddleHeight) {
-          ballSpeedX = -ballSpeedX;
-        } else {
-          resetBall();
-        }
-      }
-
-      if (ballX > canvas.width - paddleWidth) {
-        if (ballY > aiY && ballY < aiY + paddleHeight) {
-          ballSpeedX = -ballSpeedX;
-        } else {
-          resetBall();
-        }
-      }
-    }
-
-    function resetBall() {
-      ballX = canvas.width / 2;
-      ballY = canvas.height / 2;
-      ballSpeedX = -ballSpeedX;
-      ballSpeedY = (Math.random() * 4) - 2;
-    }
 
     function draw() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-      drawNet();
-      drawRect(0, playerY, paddleWidth, paddleHeight);
-      drawRect(canvas.width - paddleWidth, aiY, paddleWidth, paddleHeight);
-      drawBall(ballX, ballY, 8);
+      if (gameOver) return;
+
+      const head = { x: snake[0].x + direction.x, y: snake[0].y + direction.y };
+
+      if (
+        head.x < 0 || head.x >= tileCount ||
+        head.y < 0 || head.y >= tileCount ||
+        snake.some(seg => seg.x === head.x && seg.y === head.y)
+      ) {
+        gameOver = true;
+        alert("💀 Game Over!");
+        location.reload();
+        return;
+      }
+
+      snake.unshift(head);
+
+      if (head.x === food.x && head.y === food.y) {
+        food = randomFood();
+      } else {
+        snake.pop();
+      }
+
+      ctx.fillStyle = '#111';
+      ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+      ctx.fillStyle = '#0f0';
+      snake.forEach(seg => {
+        ctx.fillRect(seg.x * gridSize, seg.y * gridSize, gridSize - 1, gridSize - 1);
+      });
+
+      ctx.fillStyle = '#0f0';
+      ctx.fillRect(food.x * gridSize, food.y * gridSize, gridSize - 1, gridSize - 1);
     }
 
-    function gameLoop() {
-      update();
-      draw();
-      requestAnimationFrame(gameLoop);
-    }
-
-    gameLoop();
+    setInterval(draw, 120);
   </script>
+
 </body>
 </html>
