--- a/index.html
+++ b/index.html
@@ -3,159 +3,82 @@
 <head>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5310734846855331"
      crossorigin="anonymous"></script>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Neon Snake</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cyperking5</title>
   <style>
     body {
       margin: 0;
       background-color: #000;
-      color: #0f0;
-      font-family: monospace;
+      font-family: 'Orbitron', sans-serif;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       height: 100vh;
+      color: #00fff7;
     }
 
-    canvas {
+    h1 {
+      font-size: 2.5em;
+      text-shadow: 0 0 10px #00fff7, 0 0 20px #00fff7;
+      margin-bottom: 20px;
+    }
+
+    .game-box {
+      position: relative;
+      width: 300px;
+      height: 200px;
+      border: 2px solid #00fff7;
+      box-shadow: 0 0 20px #00fff7;
       background-color: #111;
-      box-shadow: 0 0 20px #0f0;
-      border: 2px solid #0f0;
     }
 
-    .controls {
-      margin-top: 20px;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 10px;
+    .paddle {
+      position: absolute;
+      width: 6px;
+      height: 30px;
+      background-color: #00fff7;
     }
 
-    button {
-      background-color: #000;
-      border: 2px solid #0f0;
-      color: #0f0;
-      padding: 10px 20px;
-      font-size: 16px;
-      cursor: pointer;
-      box-shadow: 0 0 5px #0f0;
+    .paddle.left {
+      left: 0;
+      top: 40%;
     }
 
-    button:active {
-      box-shadow: 0 0 15px #0f0;
+    .paddle.right {
+      right: 0;
+      top: 40%;
     }
+
+    .ball {
+      position: absolute;
+      top: 45%;
+      left: 50%;
+      width: 8px;
+      height: 8px;
+      background-color: #00fff7;
+      border-radius: 50%;
+      animation: bounce 2s linear infinite;
+    }
+
+    @keyframes bounce {
+      0%   { top: 10%; left: 10%; }
+      25%  { top: 80%; left: 20%; }
+      50%  { top: 20%; left: 80%; }
+      75%  { top: 60%; left: 60%; }
+      100% { top: 10%; left: 10%; }
+    }
+
+    @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap');
   </style>
 </head>
 <body>
-
-  <canvas id="game" width="300" height="300"></canvas>
-
-  <div class="controls">
-    <button onclick="setDirection('up')">⬆️</button>
-    <div>
-      <button onclick="setDirection('left')">⬅️</button>
-      <button onclick="setDirection('down')">⬇️</button>
-      <button onclick="setDirection('right')">➡️</button>
-    </div>
+  <h1>Cyperking5</h1>
+  <div class="game-box">
+    <div class="paddle left"></div>
+    <div class="paddle right"></div>
+    <div class="ball"></div>
   </div>
-
-  <script>
-    const canvas = document.getElementById('game');
-    const ctx = canvas.getContext('2d');
-
-    const gridSize = 15;
-    const tileCount = canvas.width / gridSize;
-
-    let snake = [{ x: 10, y: 10 }];
-    let direction = { x: 0, y: 0 };
-    let food = randomFood();
-    let gameOver = false;
-
-    function randomFood() {
-      return {
-        x: Math.floor(Math.random() * tileCount),
-        y: Math.floor(Math.random() * tileCount)
-      };
-    }
-
-    function setDirection(dir) {
-      if (dir === 'up' && direction.y === 0) direction = { x: 0, y: -1 };
-      if (dir === 'down' && direction.y === 0) direction = { x: 0, y: 1 };
-      if (dir === 'left' && direction.x === 0) direction = { x: -1, y: 0 };
-      if (dir === 'right' && direction.x === 0) direction = { x: 1, y: 0 };
-    }
-
-    document.addEventListener('keydown', e => {
-      if (e.key === 'ArrowUp') setDirection('up');
-      if (e.key === 'ArrowDown') setDirection('down');
-      if (e.key === 'ArrowLeft') setDirection('left');
-      if (e.key === 'ArrowRight') setDirection('right');
-    });
-
-    // Touch-Steuerung
-    let touchStartX = 0;
-    let touchStartY = 0;
-
-    canvas.addEventListener('touchstart', e => {
-      const t = e.touches[0];
-      touchStartX = t.clientX;
-      touchStartY = t.clientY;
-    });
-
-    canvas.addEventListener('touchend', e => {
-      const t = e.changedTouches[0];
-      const dx = t.clientX - touchStartX;
-      const dy = t.clientY - touchStartY;
-
-      if (Math.abs(dx) > Math.abs(dy)) {
-        if (dx > 0) setDirection('right');
-        else setDirection('left');
-      } else {
-        if (dy > 0) setDirection('down');
-        else setDirection('up');
-      }
-    });
-
-    function draw() {
-      if (gameOver) return;
-
-      const head = { x: snake[0].x + direction.x, y: snake[0].y + direction.y };
-
-      if (
-        head.x < 0 || head.x >= tileCount ||
-        head.y < 0 || head.y >= tileCount ||
-        snake.some(seg => seg.x === head.x && seg.y === head.y)
-      ) {
-        gameOver = true;
-        alert("💀 Game Over!");
-        location.reload();
-        return;
-      }
-
-      snake.unshift(head);
-
-      if (head.x === food.x && head.y === food.y) {
-        food = randomFood();
-      } else {
-        snake.pop();
-      }
-
-      ctx.fillStyle = '#111';
-      ctx.fillRect(0, 0, canvas.width, canvas.height);
-
-      ctx.fillStyle = '#0f0';
-      snake.forEach(seg => {
-        ctx.fillRect(seg.x * gridSize, seg.y * gridSize, gridSize - 1, gridSize - 1);
-      });
-
-      ctx.fillStyle = '#0f0';
-      ctx.fillRect(food.x * gridSize, food.y * gridSize, gridSize - 1, gridSize - 1);
-    }
-
-    setInterval(draw, 120);
-  </script>
-
 </body>
 </html>
